Switch to using mdx

--- a/src/blog/testing-http-requests-in-rails-with-vcr.mdx
+++ b/src/blog/testing-http-requests-in-rails-with-vcr.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Testing HTTP requests in Rails with VCR'
 date: '2017-01-15'
-tags: ['ruby', 'rails', 'testing']
+topics: ['ruby', 'rails', 'testing']
 excerpt: 'A guide to setting up the VCR gem in Rails to test HTTP requests.'
 readTime: '4 minutes'
 type: 'blog'
