--- a/src/garden/memory-leak.mdx
+++ b/src/garden/memory-leak.mdx
@@ -5,6 +5,6 @@ topics: ['engineering']
 type: 'note'
 ---
 
-When memory is allocated but not deallocated when it is no longer needed
+- When memory is allocated but not deallocated when it is no longer needed
 
-It blocks memory resouces and degrades system performance over time
+- It blocks memory resouces and degrades system performance over time
