--- a/src/garden/side-effects.mdx
+++ b/src/garden/side-effects.mdx
@@ -5,12 +5,11 @@ topics: ['engineering']
 type: 'note'
 ---
 
-A side effect is
-any application state change that is observable outside the called function, other than its returned value.
+A side effect is any application state change that is observable outside the called function, other than its returned value
 
 Side effects include:
 
-- Modifying any external vairable of object property (e.g. a globa variable)
+- Modifying any external variable of object property (e.g. a global variable)
 - Logging to the console
 - Writing to the screen, a file or the network
 - Triggering an external process
