--- a/src/blog/history-of-london-underground.mdx
+++ b/src/blog/history-of-london-underground.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'History of the London Underground'
-date: '2017-08-21'
+lastUpdated: '2017-08-21'
 topics: ['tube', 'london']
 type: 'blog'
 ---
