--- a/src/blog/london-pasenger-transport-board-years.mdx
+++ b/src/blog/london-pasenger-transport-board-years.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'The London Passenger Transport Board years'
-date: '2017-08-21'
+lastUpdated: '2017-08-21'
 topics: ['tube']
 type: 'blog'
 ---
