--- a/src/garden/navigation-in-react-native.mdx
+++ b/src/garden/navigation-in-react-native.mdx
@@ -5,15 +5,13 @@ topics: ['React Native']
 type: 'note'
 ---
 
-# Navigation
-
 Navigation in React Native apps is commonly handled by `react-navigation`
 
-The whole app needs to be wrapped in `NavigationContainer` whicj is a component which manages our navigation tree and contains the navigation state. This component must wrap all navigators structure.
+The whole app needs to be wrapped in `NavigationContainer` which is a component that manages our navigation tree and contains the navigation state. This component must wrap all navigators structure.
 
 ## Stack navigator
 
-The stack navigator provides a way for your app to transition bewtween screens and manage navigation history.
+The stack navigator provides a way for your app to transition between screens and manage navigation history.
 
 If your app uses only one stack navigator then it is conceptually similar to how a web browser handles navigation state - your app pushes an dpops items from the navigation stack as users interact with it, and this resukts in the user seeing different screens.
 
