--- a/src/garden/use-callback.mdx
+++ b/src/garden/use-callback.mdx
@@ -5,11 +5,11 @@ topics: ['react']
 type: 'note'
 ---
 
-# useCallback
-
 ## TLDR;
 
 **useCallback - Allows you to cache an instance of a function between renders**
+
+## useCallback
 
 ```
 const memoizedCallback = useCallback(
