--- a/src/garden/use-memo.mdx
+++ b/src/garden/use-memo.mdx
@@ -5,11 +5,11 @@ topics: ['react']
 type: 'note'
 ---
 
-# useMemo
-
 ## TLDR;
 
 **useMemo - Allows you to cache a value between renders**
+
+## useMemo
 
 ```
 const memoizedValue = useMemo(() => computeExpensiveValue(a, b), [a, b]);
